--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>爱是自由意志的承诺</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>爱的选择o(LoveChoice)</title>
+</head>
+<body>
+  <h1>爱是自由意志的承诺</h1>
+</body>
+</html>
