--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>爱的选择o(LoveChoice)</title>
+<title>爱是自由意志的沉沦o</title>
 </head>
 <body>
   <h1>爱是自由意志的承诺</h1>
