--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>爱是自由意志的沉沦o</title>
 </head>
 <body>
-  <h1>爱是自由意志的承诺</h1>
+  <a href="https://love-choice.github.io/Liber">爱是自由意志的承诺</a>
 </body>
 </html>
