--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>爱是自由意志的沉沦o</title>
+<link rel="icon" href="lovechoice.ico" type="image/x-icon" />
 </head>
 <body>
   <a href="https://love-choice.github.io/Liber">爱是自由意志的承诺</a>
